# botmerger

./: README.md  pyproject.toml
botmerger/: __init__.py  base.py  core.py  mergers.py  models.py  utils.py
botmerger/experimental/: inquiry_bot.py
botmerger/ext/: discord_integration.py
mergedbots/: __init__.py  base.py  bot_manager.py  core.py  errors.py  models.py  utils.py
mergedbots/botmerger/: base.py  core.py  errors.py  models.py
mergedbots/experimental/: non_event_based.py  sequential.py  two_way_bot.py
mergedbots/ext/: discord_integration.py  langchain_integration.py
tests/: test_merged_bot.py  test_merged_channel.py  test_merged_message.py  test_merged_object.py  test_single_turn_handler.py  test_single_turn_responder.py
