[tool.poetry]
name = "mergedbots"
version = "0.1.0"
description = ""
authors = ["Oleksandr Tereshchenko <toporok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"  # TODO extend this to older versions too
pydantic = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
