[tool.black]
line-length = 119

[tool.poetry]
name = "botmerger"
version = "0.0.3"
description = ""
authors = ["Oleksandr Tereshchenko <toporok@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"  # TODO extend this to older versions too
pydantic = "^1"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
pre-commit = "*"
pylint = "*"

[tool.poetry.extras]
langchain = ["langchain"]
discord = ["discord.py"]
all = ["langchain", "discord.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
